fix: center collapse button

--- a/src/app/sidebar/Sidebar.module.css
+++ b/src/app/sidebar/Sidebar.module.css
@@ -31,6 +31,10 @@
     visibility: hidden;
 }
 
+.iconWrapper {
+    display: flex;
+    align-items: center;
+}
 .iconWrapper svg {
     transition: var(--animation-duration);
 }
